# openvoice

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.agents/skills/iced-rust-best-practices/: SKILL.md
.agents/skills/iced-rust-best-practices/references/: official-sources.md
docs/: AUDIO_CAPTURE_MVP.md  HYPRLAND_SCREEN_SHARE.md  PRD.md  TODO.md  spec.md
src/: index.html  main.rs  main.tsx  settings.html  settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  transcription.rs
src/app/: bootstrap.rs  message.rs  mod.rs  state.rs  update.rs
src/components/atoms/: index.ts
src/components/atoms/Badge/: Badge.module.css  Badge.tsx
src/components/atoms/Button/: Button.module.css  Button.tsx
src/hooks/: index.ts  useTauri.ts
src/modules/: mod.rs
src/modules/audio/: application.rs  domain.rs
src/modules/auth/: application.rs  domain.rs  infrastructure.rs
src/modules/copilot/: application.rs  domain.rs  infrastructure.rs
src/modules/dictation/: application.rs  domain.rs  infrastructure.rs
src/modules/live_transcription/: application.rs  domain.rs
src/modules/settings/: application.rs  domain.rs  infrastructure.rs
src/platform/: audio.rs  hyprland.rs  mod.rs  monitors.rs  screenshot.rs  window.rs
src/styles/: globals.css
src/support/openai/: codex_responses.rs  mod.rs
src/types/: index.ts
src/ui/: copilot.rs  copilot_response.rs  home.rs  mod.rs  overlay.rs  sessions.rs  settings.rs  subtitle.rs  theme.rs
src/ui/components/: chrome_button.rs  drag_handle.rs  mod.rs  status_indicator.rs  waveform.rs
src/views/: index.ts
src/views/Overlay/: Overlay.module.css  Overlay.tsx
src/views/Settings/: Settings.module.css  Settings.tsx
(+21 files in other folders)
