[package]
name = "openvoice_linux_iced"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["wgpu", "tiny-skia", "crisp", "web-colors", "thread-pool", "linux-theme-detection", "x11"] }
base64 = "0.22.1"
cpal = "0.17.3"
hound = "3.5.1"
keyring = "3.6.3"
rand = "0.8.5"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tungstenite = { version = "0.24.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
