[package]
name = "openvoice"
version = "0.1.0"
description = "Voice-to-clipboard transcription app"
authors = ["you"]
edition = "2021"

[lib]
name = "openvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["json"] }
reqwest = { version = "0.12", features = ["json"] }

# Audio recording
cpal = "0.15"
hound = "3.5"

# Encoding
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt"] }

# Logging
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
# ALSA for Linux audio
# cpal already handles this via alsa crate

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
